contact page , Accesebility

--- a/P4-Project-Updates/css/bootstrap.css
+++ b/P4-Project-Updates/css/bootstrap.css
@@ -570,7 +570,8 @@ ul {
 .row:after,
 .row:before {
     display: table;
-    content: " "
+    content: " ";
+
 }
 
 .btn-group-vertical>.btn-group:after,
