--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -13,6 +13,33 @@ body {
     height: auto;
 }
 
+.contact-info{
+    padding-top: 40px;
+    padding-left: 80px;
+    font-size: large;
+}
+
+.lable-text{
+    display: flex;
+    width: 500px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-size: large;
+}
+
+.form-control{
+    padding-left: 200px;
+}
+
+
+.registeri{
+    padding: 10px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+}
 
 
 .image-size-mode{
@@ -22,7 +49,7 @@ body {
 
 .portfolio-thumb{
     height: 270px;
-    width: 270px;
+     width: 270px;
 }
 
 .text-intro{
@@ -31,6 +58,7 @@ body {
     margin-bottom: 32px;
 }
 
+     
 .text-intro-2{
     color: rgb(26, 25, 25);
 }
@@ -65,6 +93,9 @@ button {
 }
 
 .bloc-lg {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     padding: 100px 50px;
 }
 
@@ -401,12 +432,11 @@ h1 {
 }
 
 .tc-white {
-
-    filter: invert(100%);
+    filter: invert(100%);           
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #364577;
     color: #FFFFFF!important;
 }
 
