--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -9,8 +9,8 @@ body {
 
 .img-responsive{
     display: block;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .contact-info{
@@ -49,7 +49,7 @@ body {
 
 .portfolio-thumb{
     height: 270px;
-     width: 270px;
+    width: 270px;
 }
 
 .text-intro{
@@ -64,6 +64,8 @@ body {
 }
 
 .text-into-3{
+    display: flex;
+    justify-content: center;
     font-size: 24px;
     color: rgb(26, 25, 25);
     margin-bottom: 32px;
@@ -94,7 +96,7 @@ button {
 
 .bloc-lg {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     padding: 100px 50px;
 }
@@ -400,6 +402,10 @@ h1 {
 .portfolio-row {
     margin-bottom: 44px;
     margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
 
 
@@ -671,8 +677,20 @@ h1 {
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width:736px) {
     .bloc-mob-center-text {
         text-align: center;
+    }
+
+    .col-sm-6{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding-bottom: 50px;
+    }
+    .text-center{
+        font-size: 24px;
     }
 }
