--- a/P4-Project-Updates/style.css
+++ b/P4-Project-Updates/style.css
@@ -32,15 +32,6 @@ body {
 }
 
 
-.registeri{
-    padding: 10px;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-}
-
 
 .image-size-mode{
     height: 10px;
@@ -99,6 +90,12 @@ button {
     flex-direction: column;
     justify-content: center;
     padding: 100px 50px;
+}
+
+.bloc-lg-contact{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .bloc-md {
@@ -673,14 +670,13 @@ h1 {
     .bloc-mob-center-text {
         text-align: center;
     }
-
     .col-sm-6{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
     .text-center{
-        font-size: 24px;
+        font-size: 20px;
     }
     .form-group{
         max-width: 350px;
@@ -696,7 +692,7 @@ h1 {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        padding-top: 100px;
+        padding-top: 50px;
         font-size: large;
         margin-left: 2rem;
     }
@@ -711,5 +707,13 @@ h1 {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
+    }
+    .bloc-lg-contact{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .form-group{
+        padding-left: 5px;
     }
 }
